projects/compiler/test/typechecker/funcdecl/error_duplicate_variable.out
Error at %FILE_NAME%:1:5
Duplicate name 'foo'
  |  val foo = 123
         ^
This name is also declared at (3:6)
  |  func foo() {}
          ^
